behave_html_pretty_formatter/theme.css
/* Inspired by https://github.com/Hargne/jest-html-reporter */

html,
body {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1rem;
  margin: 0;
  padding: 0;
  color: #333;
}

body {
  padding: 1rem 1rem;
  font-size: 0.85rem;
}

header {
  display: flex;
  align-items: center;
}

#title {
  margin: 0;
  flex-grow: 1;
}

/*FEATURE CONTENT*/
.feature-panel {
  margin-bottom: 5px;
  font-size: 1rem;
}

.button-toggle {
  margin-left: 1rem;
  color: #000;
  font-weight: bold;
  text-decoration: underline;
}

.feature-title.contrast .button-toggle {
  color: #fff;
}

.feature-title {
  display: block;

  background-color: #eee;
  color: #777;
  padding: 1rem;
  margin-bottom: inherit;

}

.feature-icon {
  height: 1.2em;
  display: inline-block;
  margin-right: 0.3em;
  align-items: center;
  text-align: center;
  vertical-align: middle;
}

.feature-icon.contrast {
  display: none;
}

.feature-title.contrast {
  font-weight: bold;
  font-size: 1.25rem;
  background-color: #000;
  color: #fff;
}

.feature-summary-container {
  padding: 5px;
  background-color: #eee;
  color: #777;
  justify-content: start;
  font-size: 0.8rem;
}

.feature-summary-container.contrast {
  background-color: #000;
  color:rgb(248, 248, 248);
  font-size: 1rem;
}


@media only screen and (max-width: 720px) {
  .feature-panel {
    flex-direction: column;
  }

  .feature-summary-container {
    margin-left: 0;
    margin-top: 0.25rem;
    font-size: 1rem;
  }
}

.feature-summary-stats {
  display: inline-block;
  margin-right: 5px;
}

.feature-summary-row:last-child {
  margin-right: 0em;
}

.feature-summary-row {
  color: #777;
  border-left: 0.4rem solid #000;
  padding-left: 0.5rem;
  margin: 1px;
}

.feature-summary-row.buttons {
  display: inline-block;
  color: #000;
  font-weight: bold;
  text-decoration: underline;
  border-left: 0.4rem solid #000;
  padding-left: 0.5rem;
  margin: 1px;
}

.feature-summary-row.passed {
  color: #4f8a10;
  border-left: 0.4rem solid #4f8a10;
}

.feature-summary-row.failed {
  color: #d8000c;
  border-left: 0.4rem solid #d8000c;
}

.feature-summary-row.undefined {
  color: #9f6000;
  border-left: 0.4rem solid #ffdf61;
}

.feature-summary-row.skipped {
  color: #76adff;
  border-left: 0.4rem solid #76adff;
}

.feature-summary-row.contrast {
  color: rgb(248, 248, 248);
  border-left: 0.4rem solid rgb(248, 248, 248);
}

.feature-container {
  margin-bottom: 2rem;
}


/*SCENARIO CONTENT*/
.scenario-capsule {
  padding: 1rem;
  margin-bottom: 0.5rem;
  color: black;
}

.scenario-capsule:last-child {
  border: 0;
}

.scenario-capsule.passed {
  background-color: #dff2bf;
}

.scenario-capsule.failed {
  background-color: #f5c9cd;
}

.scenario-capsule.undefined {
  background-color: #ffdf61;
}

.scenario-capsule.skipped {
  background-color: #eef5ff;
}

.scenario-capsule.contrast {
  background-color: #000;
  color: #fff;
}

.scenario-info {
  display: flex;
  justify-content: space-between;
  font-size: 1.25rem;
}

.scenario-name {
  width: 70%;
  text-align: left;
  font-weight: bold;
  word-break: break-word;
  padding-bottom: 0.5rem;
}

.scenario-duration {
  text-align: right;
  font-size: 0.75rem;
  font-style: italic;
  padding: 0 0.5rem 0 0;
}

.scenario-duration.contrast {
  font-size: 1.25rem;
  color: #fff;
}

.scenario-tags {
  color: #333;
  font-weight: bold;
  font-size: 0.75rem;
  margin: 0.1rem 0.8em 0.5rem 0;
  display: inline-block;
}

.scenario-tags.contrast {
  color: white;
  font-weight: bold;
  font-size: 1rem;
  margin: 0.1rem 1em 0.5rem 0;
}


/*STEP CONTENT*/
.step-capsule {
  margin: 2px 0 2px 2px;
  padding: 0.5rem;
  color: #000;
  display: flex;
  flex-flow: wrap;
  font-size: 0.75rem;
  justify-content: space-between;
}

.step-capsule.passed {
  background-color: #c6dba3;
  border: 1px solid #b4cc8c;
}

.step-capsule.failed {
  background-color: #ea868f;
  ;
  border: 1px solid #dd7a82;
}

.step-capsule.undefined {
  background-color: #f1cb32;
  border: 1px solid #f1cb32;
}

.step-capsule.skipped {
  background-color: #cfe2ff;
  border: 1px solid #b8c9e4;
}

.step-capsule.contrast {
  background-color: rgb(36, 35, 35);
  color: #fff;
  font-size: 1.25rem;
  border: none;
}

.step-capsule.commentary {
  background-color: #b9b9b9;
  margin: 0.2rem 0 0.2rem 1rem;
}

.margin-top {
  margin-top: 10px;
}

.margin-bottom {
  margin-bottom: 10px;
}

.step-status-decorator-duration-capsule {
  display: flex;
}

.step-status {
  text-align: left;
  display: none;
}

.step-status.contrast {
  width: 3rem;
  padding: 0 1rem 0 0;
  font-weight: bold;
  font-size: 1.25rem;
}

.step-decorator {
  padding: 0 1.5rem 0 0;
}

.step-duration {
  color: rgb(49, 49, 49);
  font-style: italic;
  text-align: left;
  padding: 0 0.5rem 0 0;
}

.step-duration.contrast {
  color: rgb(248, 248, 248);
}


/*EMBED CONTENT*/
.messages {
  margin: 0 0 10px 15px
}

.scenario-capsule.passed .messages:last-child {
  border-bottom: 1px dashed #4f8a10;
}

.scenario-capsule.failed .messages:last-child {
  border-bottom: 1px dashed #d8000c;
}

.scenario-capsule.undefined .messages:last-child {
  border-bottom: 1px dashed #9f6000;
}

.scenario-capsule .messages.contrast:last-child {
  border-bottom: 1px dashed #fff;
}

.embed-capsule {
  margin-top: 1rem;
}

.embed_content {
  white-space: pre-wrap;
  word-wrap: break-word;
  font-size: 12px;

}

.embed_button {
  margin: 0 1rem 1rem 0;
  font-weight: bold;
  text-decoration: underline;
  color: #000;
  font-size: 12px;
}

.embed_button.contrast {
  color: #fff;
  font-size: 20px;
}


/*TABLE FORMATTING*/
th,
td {
  padding: 6px;
}

thead {
  background-color: #333;
  color: white;
  cursor: pointer;
}

table {
  color: #333;
  margin: 0.2rem 1rem;
  border-collapse: collapse;
  border: 1px solid black;
  text-align: left;
  vertical-align: middle;
}

tbody tr:nth-child(odd) {
  background-color: #fff;
}

tbody tr:nth-child(even) {
  background-color: #eee;
}


/*IMAGE AND LINK FORMATTING*/
img {
  max-width: 100%;
  max-height: 100%;
}

a {
  color: inherit;
  text-decoration: none;
}

.link a span:hover {
  text-decoration: underline;
  text-decoration-color: black;
}

.link.contrast a span:hover {
  color: grey;
  text-decoration: underline;
  text-decoration-color: grey;
}

